deployments/telegrambot_deficiente/00app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: telegrambot-deficiente
  namespace: telegrambot-deficiente
spec:
  selector:
    matchLabels:
      app: telegrambot-deficiente
  replicas: 1
  template:
    metadata:
      labels:
        app: telegrambot-deficiente
    spec:
      containers:
        - name: telegrambot-deficiente-bot
          image: ghcr.io/adrianvillanueva997/deficientebot_telegram:v1.1.2
          ports:
            - containerPort: 8080
      restartPolicy: Always

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: telegrambot-deficiente-redis
  namespace: telegrambot-deficiente
spec:
  selector:
    matchLabels:
      app: telegrambot-deficiente-redis
  replicas: 1
  template:
    metadata:
      labels:
        app: telegrambot-deficiente-redis
    spec:
      containers:
        - name: telegrambot-deficiente-redis
          image: redis:7.2.4-alpine
          ports:
            - containerPort: 6379
          volumeMounts:
            - name: telegrambot-deficiente-redis-data
              mountPath: /data
      restartPolicy: Always
      volumes:
        - name: telegrambot-deficiente-redis-data
          persistentVolumeClaim:
            claimName: telegrambot-deficiente-redis-pvc
