deployments/telegrambot_deficiente/02service.yaml
apiVersion: v1
kind: Service
metadata:
  name: telegrambot-deficiente-service
  namespace: telegrambot-deficiente
spec:
  selector:
    app: telegrambot-deficiente
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
